--- a/src/app/components/account/login/login.component.html
+++ b/src/app/components/account/login/login.component.html
@@ -45,18 +45,18 @@
           </div>
 
           <div class="another-account mt-3 text-center">
-            <div class="defualt-account d-flex flex-column flex-md-row justify-content-center gap-3">
+            <div class="defualt-account d-flex flex-column flex-md-row justify-content-center gap-3 align-items-center">
               <button type="button" class="btn btn-outline-dark d-flex align-items-center justify-content-center gap-2"
                 (click)="loginWithGoogle()">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/google/google-original.svg" alt="Google"
                   style="width: 24px; height: 24px;" />
                 Se connecter avec Google
               </button>
-              <button (click)="loginWithFacebook()" type="button"
+              <!-- <button (click)="loginWithFacebook()" type="button"
                 class="btn btn-outline-dark d-flex align-items-center justify-content-center gap-2">
                 <i class="bi bi-facebook" style="font-size: 24px; color: blue;"></i>
                 S’inscrire avec Facebook
-              </button>
+              </button> -->
             </div>
           </div>
         </div>
