--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,17 +5,6 @@
       <img src="images/logo-patarif.png" alt="Logo" class="logo-img" />
     </a>
 
-    <!--   <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#mainNavbar"
-      aria-controls="mainNavbar"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button> -->
 <div id="sideMenu" class="side-menu">
   <button class="close-btn" (click)="closeSideMenu()"><i class="bi bi-x-lg"></i></button>
   <ul>
@@ -28,13 +17,13 @@
       </li>
     </a>
 
-    <li class="login" *ngIf="!isLogged"><a routerLink="/login" (click)="closeSideMenu()">Login</a></li>
-    <li><a routerLink="/home" (click)="closeSideMenu()">Home</a></li>
-    <li><a routerLink="/learning" (click)="closeSideMenu()">Learning Zone</a></li>
-    <li><a routerLink="/games" (click)="closeSideMenu()">Playground</a></li>
-    <li><a routerLink="/shop" (click)="closeSideMenu()">Shop</a></li>
-    <li><a routerLink="/contact-us" (click)="closeSideMenu()">contact</a></li>
-    <li class="logout" *ngIf="isLogged"><a routerLink="/login" (click)="onLogout()">Logout</a></li>
+    <li class="login" *ngIf="!isLogged"><a routerLink="/login" (click)="closeSideMenu()">Connexion</a></li>
+    <li><a routerLink="/home" (click)="closeSideMenu()">Accueil</a></li>
+    <li><a routerLink="/learning" (click)="closeSideMenu()">Zone d’apprentissage</a></li>
+    <li><a routerLink="/games" (click)="closeSideMenu()">Aire de jeux</a></li>
+    <li><a routerLink="/shop" (click)="closeSideMenu()">Boutique</a></li>
+    <li><a routerLink="/contact-us" (click)="closeSideMenu()">Contact</a></li>
+    <li class="logout" *ngIf="isLogged"><a routerLink="/login" (click)="onLogout()">Déconnexion</a></li>
   </ul>
 </div>
 
@@ -43,26 +32,20 @@
       <ul class="navbar-nav gap-4">
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link nav-link-animated" routerLink="/home" routerLinkActive="active"
-            [routerLinkActiveOptions]="{ exact: true }">Home</a>
+            [routerLinkActiveOptions]="{ exact: true }">Accueil</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link nav-link-animated" routerLink="/learning" routerLinkActive="active">Learning Zone</a>
-        </li>
-        <!-- <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link nav-link-animated" routerLink="/stories" routerLinkActive="active">Storytime</a>
-        </li> -->
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link nav-link-animated" routerLink="/games" routerLinkActive="active">Playground</a>
+          <a class="nav-link nav-link-animated" routerLink="/learning" routerLinkActive="active">Zone d’apprentissage</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link nav-link-animated" routerLink="/shop" routerLinkActive="active">Shop</a>
+          <a class="nav-link nav-link-animated" routerLink="/games" routerLinkActive="active">Aire de jeux</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link nav-link-animated" routerLink="/contact-us" routerLinkActive="active">contact</a>
+          <a class="nav-link nav-link-animated" routerLink="/shop" routerLinkActive="active">Boutique</a>
         </li>
-        <!-- <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link nav-link-animated" routerLink="/characters" routerLinkActive="active">Characters</a>
-        </li> -->
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link nav-link-animated" routerLink="/contact-us" routerLinkActive="active">Contact</a>
+        </li>
       </ul>
     </div>
 
@@ -77,34 +60,30 @@
           [attr.aria-expanded]="menuOpen" alt="User" />
 
         <button *ngIf="!isLogged" class="btn btn-primary login" [routerLink]="['/login']">
-          <i class="bi bi-box-arrow-in-right"></i> Login
+          <i class="bi bi-box-arrow-in-right"></i> Connexion
         </button>
 
         <ul class="dropdown-menu dropdown-menu-end shadow-sm" [class.show]="menuOpen">
           <ng-container *ngIf="isLogged; else guestMenu">
             <li>
               <a class="dropdown-item d-flex align-items-center gap-2" [routerLink]="['/profile']">
-                <i class="bi bi-person-circle fs-5"></i> Profile
+                <i class="bi bi-person-circle fs-5"></i> Profil
               </a>
             </li>
             <li>
               <hr class="dropdown-divider" />
             </li>
            <li>
-  <a 
-    class="dropdown-item logout d-flex align-items-center gap-2 text-danger" 
-    (click)="onLogout()"
-  >
-    <i class="bi bi-box-arrow-right fs-5"></i> Logout
-  </a>
-</li>
-
+              <a class="dropdown-item logout d-flex align-items-center gap-2 text-danger" (click)="onLogout()">
+                <i class="bi bi-box-arrow-right fs-5"></i> Déconnexion
+              </a>
+            </li>
           </ng-container>
 
           <ng-template #guestMenu>
             <li>
               <a class="dropdown-item d-flex align-items-center gap-2" [routerLink]="['/login']">
-                <i class="bi bi-box-arrow-in-right"></i> Login
+                <i class="bi bi-box-arrow-in-right"></i> Connexion
               </a>
             </li>
           </ng-template>
@@ -118,6 +97,5 @@
 
   </div>
 </nav>
-
 
 <app-search-modal [visible]="isOpen" (close)="isOpen = false"></app-search-modal>
