--- a/src/app/components/pages/home/hero-section/hero-section.component.html
+++ b/src/app/components/pages/home/hero-section/hero-section.component.html
@@ -8,21 +8,14 @@
                 <img src="images/welcome.png" alt="welcome" style="width:40px; height:auto;">
             </div>
             <p class="welcome-message mb-0">
-                Welcome to <span style="color: rgba(255, 0, 110, 1);">Patarif's</span> magical universe
+                Bienvenue dans <span style="color: rgba(255, 0, 110, 1);">l’univers magique de Patarif</span>
             </p>
         </div>
 
-        <h1 class="hero-title text-start">
-            <span class="line1">
-                The <span class="break-after">Best</span> place to
-            </span><br>
-            <span class="line2">
-                <span style="color: rgba(100, 134, 255, 1);" class="learn">Learn </span>
-                <span class="break-after">and </span>
-                <span style="color: rgba(251, 86, 100, 1);" class="play">play </span>
-            </span><br>
-            <span class="line3">for kids</span>
-        </h1>
+        <h1 class="hero-title text-start"> <span class="line1"> The <span class="break-after">Best</span> place to
+            </span><br> <span class="line2"> <span style="color: rgba(100, 134, 255, 1);" class="learn">Learn </span>
+                <span class="break-after">and </span> <span style="color: rgba(251, 86, 100, 1);" class="play">play
+                </span> </span><br> <span class="line3">for kids</span> </h1>
         <img class="img-fluid learn-line" src="images/learnLine.png" alt="line">
         <img class="img-fluid play-line" src="images/playLine.png" alt="line">
     </div>
@@ -37,14 +30,14 @@
     <div class="lets-play"><img class="img-fluid" src="images/letsPlay.png" alt="lets-play"></div>
 
     <div class="collection">
-        <div class="collection-item enjoy">Enjoy</div>
+        <div class="collection-item enjoy">Profitez</div>
         <div class="collection-item book"><img src="images/book.png" alt="book"></div>
-        <div class="collection-item stories">Stories</div>
+        <div class="collection-item stories">Histoires</div>
         <div class="collection-item love"><img src="images/love.png" alt="favourite"></div>
-        <div class="collection-item learning">Learning</div>
+        <div class="collection-item learning">Apprentissage</div>
         <div class="collection-item star"><img src="images/star.png" alt="favourite"></div>
         <div class="collection-item game"><img src="images/game.png" alt="favourite"></div>
-        <div class="collection-item play-collection-item">Play</div>
+        <div class="collection-item play-collection-item">Jouer</div>
     </div>
 
 </div>
