--- a/src/app/components/game-template/game-template.component.css
+++ b/src/app/components/game-template/game-template.component.css
@@ -4,6 +4,7 @@
   position: relative;
   overflow: auto;
   margin: 20px auto ;
+  overflow-x: hidden;
   
 }
 .btns{
@@ -47,8 +48,8 @@ height: 50px;
   position: relative;
   box-sizing: border-box;
 height: 100%;
-  overflow: auto;
-
+overflow-x: hidden;
+overflow-y: auto;
 }
 .game-card.no-bg {
   background: none !important;
@@ -88,7 +89,7 @@ height: 100%;
   min-height: 320px;
   gap: 5px;
   border-radius: 1rem;
-  overflow: auto;
+  
   border: 1px solid rgba(255, 255, 255, 0.2);
   background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05));
 
